# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2009
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.4.xx
DATE 0x/xx/2009
25th Alpha Release

NEWS:

NEW: [features/improvments]
+Add Count feature to find dialog for counting number of matches in a buffer.
+Add Vim find char motions (patch from hasan.aljudy).
+Add support for the Groovy programming language (patch from omar.gomez).
+Add new style sheet Guepardo (patch from omar.gomez).
+Add support for loading installation provided key profiles.
+Add VisualStudio keybindings option (from Vivian).

BUG FIXES:
+Fix Launch config not properly being initialized when config panel accessed
from plugin dialog for first time.
+Fix command entry listing of paths (patch from hasan.aljudy).

#-----------------------------------------------------------------------------#

VERSION 0.4.75
DATE 03/28/2009
24th Alpha Release

NEWS:

This release fixes a handful of important bugs and new features. The Plugin
Manager dialog has been completely reworked. Configuration options for plugins
that provide them are now available in the dialog as well as better error
reporting for plugins that could not properly be loaded.

File session support has also been improved to allow for saving and loading of 
multiple custom sessions. Due to format changes the upgrade will require any
session from previous installations to be overwritten.

NEW: [features/enhancments]
+New Plugin Manager Dialog.
+Improved configuration options for plugins.
+Incompatible plugins are now displayed in PluginManager with message explaining why.
+Some basic autocompletion support for CSS.
+Improved support for sessions. Multiple custom sessions can not be saved and
reloaded (modified code from Erik Tollerud).
+Add shortcut for LineDelete to delete line without modifying clipboard.